--- a/main.html
+++ b/main.html
@@ -7,6 +7,15 @@
 </head>
 
 <body>
+	<div class="hero">
+  <img src="https://example.com/your-image.jpg" alt="Hero Image" class="hero-img">
+  <div class="hero-content">
+    <h1>Welcome to Our Adventure</h1>
+    <p>Discover new places and experiences with us.</p>
+    <a href="#" class="explore-btn">Explore Now</a>
+  </div>
+</div>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
